--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td> <img src="C:\Users\TOSHIBA\Desktop\Web development\HTML - Personal site\Img\Screenshot_20220109-201902_Twitter-modified.png" alt="t.n profile" height="200" width="200">
+      <td> <img src="Img\Screenshot_20220109-201902_Twitter-modified.png" alt="t.n profile" height="200" width="200">
       </td>
       <td>
         <h1>Tony AL NATOUR</h1>
