--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <li>Skiing</li>
     <li>Reading<a href="https://en.wikipedia.org/wiki/A_New_Earth">(my recent book)</a></li>
   </ol>
-  <p><a href="contact me.html" <strong>Contact me</strong></a>
+  <p><a href="contact me.html" <strong>contact me</strong></a>
   </p>
   <p>
       <hr size="3" noshade >
